Fix CSS for imodule text wrap

--- a/media/css/dashboard.css
+++ b/media/css/dashboard.css
@@ -5,6 +5,10 @@
 .dashboard .module table td { white-space:nowrap; }
 .dashboard .module table td a { display:block; padding-right:.6em; }
 
+.dashboard .module table th { width:100%; }
+.dashboard .imodule table td { white-space:nowrap; }
+.dashboard .imodule table td a { display:block; padding-right:.6em; }
+
 /*  RECENT ACTIONS MODULE  */
 .module ul.actionlist { margin-left:0; }
 ul.actionlist li { list-style-type:none; }
